[package]
name = "resume-builder"
version = "0.1.0"
authors = ["Dustin Knopoff <dustinknopoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.3"
serde = {version = "1.0.99", features = ["derive"]}
